# PlasmaScale

./: .gitignore  CMakeLists.txt  CTestConfig.cmake  DataImport.m  PlotData.m  accel.c  compile.sh  es1.c  es1.h  fft.c  fields.c  init.c  initwin.c  ionwave.inp  landau.inp  langmuir.inp  makefile  move.c  set.c  test.inp
app/cfg/: ionwave.inp  plasmaexpansion.inp
app/src/: CMakeLists.txt  PlasmaScale.cpp
cmake/module/: FindUmfpack.cmake  FindXGRAFIX.cmake
doc/: 2stream.ps  es1.ps  es1.tex
inp/: 2stream.inp  cold1a-fie.txt  cold1a-kin.txt  cold1a.txt  landau.inp  landaup.inp
src/: .gitignore  CMakeLists.txt  PlasmaScale.cpp  PlasmaScale.h  PlasmaScale.sublime-project  PlasmaScale.sublime-workspace  compile.sh  makefile
src/fields/: Field.cpp  Field.h  PlasmaFields.cpp  PlasmaFields.h
src/parameterization/: MacroParameterization.cpp  MacroParameterization.h  MacroParameterizationEFPI.cpp  MacroParameterizationEFPI.h  MacroParameterizationEPFI.cpp  MacroParameterizationEPFI.h  MacroParameterizationFromFile.cpp  MacroParameterizationFromFile.h  MacroParameterizationFullPIC.cpp  MacroParameterizationFullPIC.h  MacroParameterizationFullPICtoHistogram.cpp  MacroParameterizationFullPICtoHistogram.h  MacroParameterizationFullPICtoMaxwell.cpp  MacroParameterizationFullPICtoMaxwell.h  MacroParameterizationPUREHaar.cpp  MacroParameterizationPUREHaar.h  MacroParameterizationShay.cpp  MacroParameterizationShay.h  MacroParameterizationWavelets.cpp  MacroParameterizationWavelets.h
src/particles/: CollectionOfPopulations.cpp  CollectionOfPopulations.h  MacroParameterization.h  MacroParameterizationFromFile.cpp  MacroParameterizationFromFile.h  MacroParameterizationShay.cpp  MacroParameterizationShay.h  PopulationOfParticles.cpp  PopulationOfParticles.h
src/plasma/: CMakeLists.txt  History.cpp  History.h  MacroState.cpp  MacroState.h  Plasma.cpp  Plasma.h  Simulation.cpp  Simulation.h  State.cpp  State.h
src/representation/: MaxwellianRepresentation.cpp  MaxwellianRepresentation.h  MaxwellianRepresentationP1.cpp  MaxwellianRepresentationP1.h  PUREHaarRepresentation.cpp  PUREHaarRepresentation.h  PUREHaarRepresentationP1.cpp  PUREHaarRepresentationP1.h  Representation.h  WaveletRepresentation.cpp  WaveletRepresentation.h  WaveletRepresentationP1.cpp  WaveletRepresentationP1.h
src/tools/: CurveDiagnostic.cpp  CurveDiagnostic.h  Diagnostic.cpp  Diagnostic.h  HaarTools.cpp  HaarTools.h  RandomTools.cpp  RandomTools.h  ScatterDiagnostic.cpp  ScatterDiagnostic.h  Tools.cpp  Tools.h  XGrafixInterface.cpp  XGrafixInterface.h
src/wavelets/: README.MINGW4.5-STATIC.txt  wavelet2s.cpp  wavelet2s.h
test/: CMakeLists.txt
test/algebra/: CMakeLists.txt  t-Eigen.cpp
test/representations/: CMakeLists.txt
test/tools/: CMakeLists.txt  t-HaarTools.cpp  t-Tools.cpp
